Removed Hello world

--- a/offline.html
+++ b/offline.html
@@ -89,7 +89,7 @@ span.apple-converted-space
 </style>
 
 </head>
-<body lang=EN-US link=blue vlink="#954F72" style='tab-interval:.5in;background-color:#666666;'>
+<body lang=EN-US link=blue vlink="#954F72" style='tab-interval:.5in;background-color:#666666;margin:0'>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
 text-align:center;line-height:normal;mso-outline-level:3;background:#FFE227'>
