--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <style>
 <!--
