--- a/offline.html
+++ b/offline.html
@@ -101,10 +101,10 @@ text-align:center;line-height:normal;mso-outline-level:3;background:#FFE227'>
 style='font-size:14.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-family:
 "Times New Roman";color:red;'>
 
-<img width=220 height=40
+<img width=280 height=71
 src="logo.png" alt=logo.png v:shapes="Picture_x0020_2"></span>
 
-<br><br><br>
+<br><br>
 
 </p>
 
@@ -127,31 +127,14 @@ style='font-size:26.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-fa
 <br><br>
 
 <span
-style='font-size:26.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-family:
-"Times New Roman";color:white;mso-font-kerning:0pt'>Sorry! Digi Live Chat
-service<br>
+style='font-size:24.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-family:
+"Times New Roman";color:white;mso-font-kerning:0pt'>Sorry! Digi Chatbot 
+<br>
 is currently offline.<o:p></o:p></span>
 
 <br>
 <br>
 
-<b><span
-style='font-size:14.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-family:
-"Times New Roman";color:white;mso-font-kerning:0pt'>Check back with us between
-10AM to 9PM, or</span></b>
-
-<b><span style='font-size:
-14.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-family:"Times New Roman";
-color:white;mso-font-kerning:0pt'><br>
-drop us your enquiries at&nbsp;</span></b>
-
-<a
-href="mailto:help@digi.com.my"><span style='font-size:14.0pt;mso-bidi-font-size:
-11.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-family:"Times New Roman";
-color:#FFE227;mso-font-kerning:0pt'>help@digi.com.my</span></a>
-<b><span
-style='font-size:14.0pt;font-family:"Helvetica","sans-serif";mso-fareast-font-family:
-"Times New Roman";color:white;mso-font-kerning:0pt'>.</span></b>
 </p>
 
 </body>
